# taiwan-stock-analyzer

./: .env.example  .gitignore  DEPLOY.md  README.md  pyproject.toml  render.yaml
app/: alerts.py  analysis.py  company.py  config.py  database.py  dividends.py  domain.py  financials.py  institutions.py  main.py  market_seed.py  ownership.py  providers.py  recommendations.py  revenue.py  screening.py  service.py  stock_score.py  themes.py  valuation.py
app/static/: alerts.html  alerts.js  app.js  index.html  recommendations.html  recommendations.js  screener.html  screener.js  styles.css  watchlist.html  watchlist.js
data/: analysis_seed.json  market_seed.json
docs/: screener.md
tests/: test_alerts.py  test_analysis.py  test_company.py  test_database.py  test_dividends.py  test_financials.py  test_history.py  test_institutions.py  test_market_seed.py  test_ownership.py  test_recommendations.py  test_revenue.py  test_screening.py  test_stock_score.py  test_themes.py  test_ui.py  test_valuation.py
